Fix validation messages for price and seats; update CSS for header alignment

--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -44,7 +44,7 @@ main {
 
 .page__header {
     display: flex;
-    justify-content: end;
+    justify-content: center;
     padding: 0 0 20px 0;
     width: 100%;
 }
@@ -77,12 +77,6 @@ main {
 
 .page__form.edit {
     margin-bottom: 30px;
-}
-
-@media (max-width: 992px) {
-    .page__header {
-        justify-content: center;
-    }
 }
 
 @media (max-width: 768px) {
